add html structure

--- a/index.html
+++ b/index.html
@@ -14,8 +14,53 @@
     <title>WeatherAPP</title>
 </head>
 <body>
-   <h1>Hello</h1> 
-   <button type="button" class="btn btn-info">Info</button>
+   <div class="container">
+    <div class="weather-app">
+        <div class="row">
+            <div class="col-3">
+            <h4>
+             Currently city:
+            </h4>
+            <h1>
+             Odessa
+            </h1>
+            <ul>
+             <li>
+                Friday, 19.07.2022 19:29
+             </li>
+             <li>
+                Clear
+             </li>
+            </ul>
+            </div>
+            <div class="col-3">.
+                <img src="images/mostly sunny.png" alt="mostly sunny" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                12°C | 45°F
+            </div>
+            <div class="col-3">
+                <ul>
+                    <li>
+                        Precipitation: 0%
+                    </li>
+                    <li>
+                        Humidity: 73%
+                    </li>
+                    <li>
+                        Wind: 2 km/h
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <small>
+            <a href="https://github.com/OlhaAleks/Vanilla-Weather-app" target="_blank">Open-sourse code</a>
+            by Olha Aleksandrova
+        </small>
+    </div>
+   </div>
 </body>
 <script src="src/app.js"></script>
 </html>
