--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 </head>
 <body>
    <div class="container">
+    <div class="weather-app-wrapper">
     <div class="weather-app">
         <div class="row">
-            <div class="col-3">
+            <div class="col-6">
             <h4>
              Currently city:
             </h4>
@@ -33,15 +34,17 @@
              </li>
             </ul>
             </div>
-            <div class="col-3">.
+            <div class="col-4">.
                 <img src="images/mostly sunny.png" alt="mostly sunny" />
             </div>
         </div>
         <div class="row">
-            <div class="col-3">
-                12°C | 45°F
+            <div class="col-5">
+                <div class="temperature-view">
+                <strong>12</strong><span class="units"> °C | <a href="#"> °F</a></span>
             </div>
-            <div class="col-3">
+            </div>
+            <div class="col-5">
                 <ul>
                     <li>
                         Precipitation: 0%
@@ -55,11 +58,14 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div class="reference">
         <small>
             <a href="https://github.com/OlhaAleks/Vanilla-Weather-app" target="_blank">Open-sourse code</a>
             by Olha Aleksandrova
         </small>
     </div>
+   </div>
    </div>
 </body>
 <script src="src/app.js"></script>
