--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
     crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css">
     <title>WeatherAPP</title>
 </head>
@@ -22,16 +23,10 @@
             <h4>
              Currently city:
             </h4>
-            <h1>
-             Odessa
-            </h1>
+            <h1 id="city"></h1>
             <ul>
-             <li>
-                Friday, 19.07.2022 19:29
-             </li>
-             <li>
-                Clear
-             </li>
+             <li>Last updated: <span id="date"></span></li>
+             <li id="description"></li>
             </ul>
             </div>
             <div class="col-4">.
@@ -41,7 +36,7 @@
         <div class="row">
             <div class="col-5">
                 <div class="temperature-view">
-                <strong>12</strong><span class="units"> °C | <a href="#"> °F</a></span>
+                <strong id="temperature"></strong><span class="units"> °C | <a href="#"> °F</a></span>
             </div>
             </div>
             <div class="col-5">
@@ -50,10 +45,10 @@
                         Precipitation: 0%
                     </li>
                     <li>
-                        Humidity: 73%
+                        Humidity: <span id="humidity"></span>%
                     </li>
                     <li>
-                        Wind: 2 km/h
+                        Wind: <span id="wind"></span> km/h
                     </li>
                 </ul>
             </div>
