Added a relevant icon from theApi

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             </ul>
             </div>
             <div class="col-4">.
-                <img src="images/mostly sunny.png" alt="mostly sunny" />
+                <img 
+                src="" 
+                id="icon"
+                />
             </div>
         </div>
         <div class="row">
