--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
     <div class="weather-app-wrapper">
     <div class="weather-app">
         <div class="row">
+            <div class="col-9">
+        <form id="search-form" class="mb-3">
+            <input 
+            type="search" 
+            placeholder="Type a city" 
+            class="form-control"
+            id="city-input"
+            />
+        </div>
+        <div class="col-3">
+            <input
+            type="submit"
+            value="Search"
+            class="form-control btn btn-outline-light btn shadow-sm"
+        </div>
+        </div>
+        </form>
+        <div class="row">
             <div class="col-6">
             <h4>
              Currently city:
