Added units conversion and style of this

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
         </div>
         <div class="row">
             <div class="col-5">
-                <div class="temperature-view">
-                <strong id="temperature"></strong><span class="units"> °C | <a href="#"> °F</a></span>
+                <div class="clearfix temperature-view">
+                <strong id="temperature"></strong><span class="units">
+                    <a href="#" id="celsius-link" class="active"> °C</a> | 
+                    <a href="#" id="fahrenheit-link"> °F</a></span>
             </div>
             </div>
             <div class="col-5">
