--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>WeatherAPP</title>
 </head>
 <body>
-   <div class="container">
+    <div class="container">
     <div class="weather-app-wrapper">
     <div class="weather-app">
         <div class="row">
@@ -51,6 +51,7 @@
                 <img 
                 src="" 
                 id="icon"
+                class="icon-height"
                 />
             </div>
         </div>
@@ -66,12 +67,13 @@
                 <ul>
                     <li>
                         Precipitation: 0%
+                    <li>
+                        Humidity: <img class="humidity-image" src="images/humidity.png" alt="wind"> 
+                        <span id="humidity"></span>%
                     </li>
                     <li>
-                        Humidity: <span id="humidity"></span>%
-                    </li>
-                    <li>
-                        Wind: <span id="wind"></span> km/h
+                        Wind: <img class="wind-image" src="images/wind.png" alt="humidity"> 
+                        <span id="wind"></span> km/h
                     </li>
                 </ul>
             </div>
