--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-5">
                 <ul>
                     <li>
-                        Precipitation: 0%
+                        Precipitation: <span id="precipitation"></span>%
                     <li>
                         Humidity: <img class="humidity-image" src="images/humidity.png" alt="wind"> 
                         <span id="humidity"></span>%
