--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input 
             type="search" 
             placeholder="Type a city" 
-            class="form-control"
+            class="form-control shadow-sm"
             id="city-input"
             />
         </div>
