--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </form>
         <div class="row">
             <div class="col-6">
-            <h4>
-             Currently city:
-            </h4>
+            <h6>
+            <a href="#" id="current-city" class="current-city">Current city</a>
+            </h6>
             <h1 id="city"></h1>
             <ul>
              <li>Last updated: <span id="date"></span></li>
